--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
 version=1.14.0-SNAPSHOT
-ballerinaLangVersion=2201.10.0-20240702-135600-18965cba
+ballerinaLangVersion=2201.10.0-20240806-083400-aabac46a
 
 checkstylePluginVersion=10.12.0
 spotbugsPluginVersion=5.0.14
@@ -15,35 +15,34 @@ jacocoVersion=0.8.10
 
 # Ballerina Library Dependencies
 # Level 01
-stdlibIoVersion=1.6.0
+stdlibIoVersion=1.6.1
 stdlibTimeVersion=2.4.0
 stdlibUrlVersion=2.4.0
 
 # Level 02
 stdlibConstraintVersion=1.5.0
-stdlibCryptoVersion=2.7.0
-stdlibLogVersion=2.9.0
+stdlibCryptoVersion=2.7.2
+stdlibLogVersion=2.10.0-20240807-203000-b85cfb9
 stdlibOsVersion=1.8.0
 stdlibTaskVersion=2.5.0
 
 # Level 03
 stdlibCacheVersion=3.8.0
-stdlibFileVersion=1.9.0
-stdlibMimeVersion=2.9.0
+stdlibFileVersion=1.10.0-20240807-205900-a4d66bb
+stdlibMimeVersion=2.10.0-20240807-205100-2728cdc
 stdlibUuidVersion=1.8.0
 
 # Level 04
-stdlibAuthVersion=2.11.0
-stdlibJwtVersion=2.11.0
-stdlibOAuth2Version=2.11.0
+stdlibAuthVersion=2.12.0-20240807-214700-37b31bb
+stdlibJwtVersion=3.0.0-20240807-214800-ea931f0
+stdlibOAuth2Version=2.12.0-20240807-220200-7f7294b
 
 # Level 05
-stdlibHttpVersion=2.11.0
+stdlibHttpVersion=2.12.0-20240808-064600-7e5bc3c
 
 # Level 06
-stdlibWebsocketVersion=2.11.0
+stdlibWebsocketVersion=2.12.0-20240808-111300-d8d25c8
 
 # Ballerinax Observer
-observeVersion=1.2.3
-observeInternalVersion=1.2.2
-
+observeVersion=1.3.0-20240807-093200-e29ca7a
+observeInternalVersion=1.3.0-20240807-094500-91e2d3a
