[Automated] Update the native jar versions

--- a/ballerina-tests/graphql-subscription-test-suite/Dependencies.toml
+++ b/ballerina-tests/graphql-subscription-test-suite/Dependencies.toml
@@ -108,6 +108,7 @@ dependencies = [
 	{org = "ballerina", name = "graphql"},
 	{org = "ballerina", name = "graphql_test_common"},
 	{org = "ballerina", name = "http"},
+	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "lang.runtime"},
 	{org = "ballerina", name = "test"},
 	{org = "ballerina", name = "websocket"}
@@ -176,6 +177,9 @@ scope = "testOnly"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.value"}
+]
+modules = [
+	{org = "ballerina", packageName = "io", moduleName = "io"}
 ]
 
 [[package]]
