--- a/.github/workflows/build-with-bal-test-graalvm.yml
+++ b/.github/workflows/build-with-bal-test-graalvm.yml
@@ -35,7 +35,7 @@ jobs:
             lang_tag: ${{ inputs.lang_tag }}
             lang_version: ${{ inputs.lang_version }}
             native_image_options: '-J-Xmx7G ${{ inputs.native_image_options }}'
-            additional_ubuntu_build_flags: '-x :graphql-compiler-plugin-tests:test'
+            additional_ubuntu_build_flags: '-x :graphql-compiler-plugin-tests:test -Pdisable=subscriptions'
             # TODO : Enable after fixing this issue : https://github.com/ballerina-platform/ballerina-lang/issues/38882
             # additional_windows_build_flags: '-x :graphql-compiler-plugin-tests:test'
             additional_windows_build_flags: '-x test'
